# middleout-pp

./: LICENSE  SYSTEM.md  SYSTEM_DECODE.md  SYSTEM_DECODE_temp.md  SYSTEM_DECODE_v1.md  SYSTEM_DECODE_v2.md  SYSTEM_DECODE_v3.md  SYSTEM_v1.md  SYSTEM_v2.md  SYSTEM_v3.md  SYSTEM_v4.md  gemm.py  main.py  par.txt  par2.txt  pyproject.toml  words.txt
frontend/: app.py
frontend/static/: app.js  index.html  style.css
letter_based/: SYSTEM.md  main.py
scratch/: test_think.py
