[project]
name = "bearhack"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aisuite>=0.1.14",
    "flask>=3.1.3",
    "flask-cors>=6.0.2",
    "google>=3.0.0",
    "google-genai>=1.2.0",
    "ollama>=0.6.1",
    "openai>=2.32.0",
]
